[gd_scene load_steps=12 format=3 uid="uid://bgsshgb7oljcj"]

[ext_resource type="Script" path="res://Enemies/Diff1/EnemyMelee.gd" id="1_fec67"]
[ext_resource type="Texture2D" uid="uid://b6t3851lhn5va" path="res://2D Pixel Dungeon Asset Pack v2.0/2D Pixel Dungeon Asset Pack/Vampire_hurt.png" id="2_nxelr"]
[ext_resource type="Script" path="res://Enemies/Diff1/StateMachine.gd" id="3_iv56i"]
[ext_resource type="Script" path="res://Idle.gd" id="4_gpwfb"]
[ext_resource type="Script" path="res://Enemies/Diff1/Aware.gd" id="5_siqo7"]
[ext_resource type="Script" path="res://Enemies/Diff1/Dead.gd" id="6_0mdc0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2atbw"]
size = Vector2(26, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bx6hb"]
size = Vector2(26, 32)

[sub_resource type="Animation" id="Animation_5f6ny"]
resource_name = "Death_ani"
length = 0.9
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.0],
"method": &"set_physics_process"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimFrames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_7js6f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimFrames:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0l3g3"]
_data = {
"Death_ani": SubResource("Animation_5f6ny"),
"RESET": SubResource("Animation_7js6f")
}

[node name="Enemy1" type="CharacterBody2D"]
script = ExtResource("1_fec67")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2atbw")

[node name="AnimFrames" type="Sprite2D" parent="."]
texture = ExtResource("2_nxelr")
hframes = 5
vframes = 2

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_bx6hb")

[node name="Invuln_Timer" type="Timer" parent="."]
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0l3g3")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("3_iv56i")
initialState = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_gpwfb")

[node name="Aware" type="Node" parent="StateMachine"]
script = ExtResource("5_siqo7")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("6_0mdc0")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Invuln_Timer" to="." method="_on_invuln_timer_timeout"]
